fixed issue with feedback where it would render invisible element when no question is present

--- a/packages/quantic/force-app/main/default/lwc/quanticFeedback/quanticFeedback.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticFeedback/quanticFeedback.css
@@ -1,9 +1,3 @@
 .feedback__main-section {
   gap: 4px;
 }
-
-.feedback__main-section,
-.feedback__success-message {
-  justify-content: flex-end;
-  align-items: center;
-}
